whoops did a lot here; forgot to commit. finished base goals, added some styling, now working on stretch

--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-    <head>
-        <meta charset="utf-8">
-        <title>Guess Who?</title>
-        <script src="data.js"></script>
-        <script src="client.js"></script>
-    </head>
-    <body>
-        
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <title>Guess Who?</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Libre+Franklin:ital,wght@0,100;0,400;1,100;1,400&family=Manrope:wght@200;300;400;500;600;700;800&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,700;1,200;1,300;1,400;1,700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <script src="jquery-3.6.1.js"></script>
+    <script src="data.js"></script>
+    <script src="client.js"></script>
+</head>
+
+<body>
+    <div id="all-content">
+        <section id="game-zone">
+            <div id="play-game-btn" class="btn-in-game">
+                CLICK TO LAUNCH GAME
+            </div>
+            <p id="guess-zone"></p>
+        </section>
+        <main id="list-of-people"></main>
+    </div>
+</body>
+
 </html>
