completed most of the functionality; cleaned up classes and formatting

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 <body>
     <div id="all-content">
         <section id="game-zone">
-            <div id="play-game-btn" class="btn-in-game">
-                CLICK TO LAUNCH GAME
+            <div id="btn-container">
+                <div id="play-game-btn" class="button btn-in-game">
+                    CLICK TO LAUNCH GAME
+                </div>
             </div>
             <p id="guess-zone"></p>
         </section>
