--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="all-content">
         <section id="game-zone">
             <div id="btn-container">
-                <div id="play-game-btn" class="button btn-in-game">
+                <div id="play-game-btn" class="button play-again">
                     CLICK TO LAUNCH GAME
                 </div>
             </div>
